--- a/FIWARE.Orion.Client/FIWARE.Orion.Client.csproj
+++ b/FIWARE.Orion.Client/FIWARE.Orion.Client.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="REST\RESTClient.cs" />
     <Compile Include="Types\NotifyConditionTypes.cs" />
+    <Compile Include="Types\SubscriptionDurations.cs" />
+    <Compile Include="Types\SubscriptionThrottlingTypes.cs" />
     <Compile Include="Types\UpdateActionTypes.cs" />
   </ItemGroup>
   <ItemGroup>
